# flashcards-app

./: .easignore  README.md  app.config.js  app.json  babel.config.js  eas.json  expo-constants.d.ts  package-lock.json  package.json
app/: _layout.tsx
app/(tabs)/: _layout.tsx  copyright.tsx  index.tsx  settings.tsx  stats.tsx  study.tsx
app/contexts/: DeckContext.tsx  StudySessionContext.tsx
app/data/: deck.json
app/data/decks/fifth-350-essensial/: fifth-350-essential.txt
app/data/decks/fifth-350-essential/: 200_Essentials_English_Words.txt  audioMap.ts  audiosMap.ts  deck.json  fifth-350-essential.txt  imageMap.ts  imagesMap.ts  prompt.txt
app/data/decks/fourth-350-essential/: audioMaps.ts  audiosMap.ts  deck.json  deck.txt  fourth-350-essential.txt  (+2 more)
components/: CEFRGauge.tsx
docs/: Pre-Requisites.md
generate_deck/: 2000 Essentials English Words__3. Level 3_ Elementary 100 Words.txt  2000 Essentials English Words__4. Level 4_ Elementary 350 Words.txt  200_Essentials_English_Words.txt  add_ipa.py  check_deck.py  check_duplicates.py  clean_images.sh  download_audio.py  fifth-500-essential copy.txt  fix-deck-txt.py  fourth-350-essential.txt  generate_deck.py  generate_deck_text.py  generate_images_dalle.py  order_deck.py  pyproject.toml  remove_ids.py
models/: Card.ts  Deck.ts  SRS.ts  Stats.ts  StudySession.ts  StudySessionManager.ts
utils/: Clock.ts  ConfigManager.ts  ProgressTracker.ts  audioMap.ts  imageMap.ts  logger.ts
utils_py/: .env  download_audio.py  download_images.py  generate_images.py  order_deck.py  pyproject.toml  resize_images.py
(+23 files in other folders)
