[project]
authors = [
  {name = "Salvatore D'angelo", email = "sasadangelo@gmail.com"},
]
description = "Utility scripts for flashcards app"
name = "generate-deck"
version = "0.1.0"

[tool.poetry.dependencies]
diffusers = "^0.34.0"
gtts = "^2.5.4"
openai = "^1.97.0"
pillow = "^11.3.0"
python = ">=3.10,<4.0"
python-dotenv = "^1.1.1"
requests = "^2.31.0"
torch = "^2.7.1"
transformers = "^4.53.1"

[tool.poetry.group.dev.dependencies]
black = "^25.9.0"
isort = "^7.0.0"

[tool.black]
line-length = 120
target-version = ["py313"]

[tool.isort]
profile = "black"
